src/test/deca/codegen/invalid/tests/importBoucle.deca
// Description:
//   test boucle infini
//
// Resultats:
//      Error:...
//

import "importBoucle2.deca"

{
	A a = new A();
	print(a.x);
}
